<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChatActivity">


    <!-- TextView para el título -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/chat_title_text"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="83dp" />

    <!-- CardView para el campo de entrada de correo electrónico y el botón de búsqueda -->
    <androidx.cardview.widget.CardView
        android:id="@+id/listviewBuscarUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:orientation="horizontal"
            android:padding="4dp">

            <EditText
                android:id="@+id/searchEmailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/purple_background"
                android:hint="@string/chat_email_hint"
                android:inputType="textEmailAddress"
                android:padding="8dp" />

            <Button
                android:id="@+id/searchUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="#60296B"
                android:text="@string/chat_search_button"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView para mostrar los usuarios encontrados -->
    <androidx.cardview.widget.CardView
        android:id="@+id/listviewUsuarios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:alpha="0.8"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listviewBuscarUsuario">

        <ListView
            android:id="@+id/usersListView"
            android:layout_width="match_parent"
            android:layout_height="180dp" />
    </androidx.cardview.widget.CardView>

    <!-- CardView para mostrar las conversaciones -->

    <TextView
        android:id="@+id/textViewMiddleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/chat_middle_title"
        android:textSize="24dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listviewUsuarios" />

    <androidx.cardview.widget.CardView
        android:id="@+id/listViewChatUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:visibility="invisible"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMiddleTitle">

        <ListView
            android:id="@+id/conversationsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500" />
    </androidx.cardview.widget.CardView>

    <!-- Layout para el campo de entrada de mensaje y el botón de enviar -->
    <LinearLayout
        android:id="@+id/messageInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Campo de entrada de mensaje -->
        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/purple_background"
            android:hint="@string/chat_message_hint"
            android:inputType="textMultiLine"
            android:padding="8dp" />

        <!-- Botón para enviar mensaje -->
        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#60296B"
            android:text="@string/chat_send_button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
