<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:backgroundTint="@color/purple_background"
    app:cardCornerRadius="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_margin="4dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp">

        <!-- Título "Usuario encontrado" -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Imagen del usuario -->
            <ImageView
                android:id="@+id/imageViewUser"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/picture_user" />

            <!-- Información del usuario -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_user"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_user"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <!-- Botón "Chatear" -->
            <Button
                android:id="@+id/buttonChat"
                android:backgroundTint="#34033D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/chat_button" />
        </LinearLayout>
    </LinearLayout>

   </androidx.cardview.widget.CardView>
