<?xml version="1.0" encoding="utf-8"?>
<!-- conversation_item.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Imagen de fondo que cubre toda la pantalla -->

    <!-- CardView para el contenido -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <io.github.florent37.shapeofview.shapes.BubbleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shape_bubble_arrowHeight="20dp"
        app:shape_bubble_arrowWidth="18dp"
        app:shape_bubble_arrowPosition="bottom"
        app:shape_bubble_borderRadius="20dp"
        app:arrow_posititon_percent="0.05"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:backgroundTint="@color/purple_500"
            app:cardCornerRadius="12dp"
 >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/text_color">


                <!-- Nombre de usuario -->
                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/conversation_item_username"
                    android:textColor="@android:color/white"/>

                <!-- Mensaje -->
                <TextView
                    android:id="@+id/messageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/conversation_item_message"
                    android:textColor="@android:color/white"/>

                <!-- Hora -->
                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/conversation_item_time"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </io.github.florent37.shapeofview.shapes.BubbleView>




</androidx.constraintlayout.widget.ConstraintLayout>